--- a/index.html
+++ b/index.html
@@ -27,14 +27,49 @@
     <section id="gallery">
       <!-- JS will inject memory items -->
     </section>
+
+    <div class="upload-btn-wrapper">
+  <a href="https://drive.google.com/..." class="floating-upload-btn" target="_blank">
+    💾 More Memories
+  </a>
+</div>
+
+
+
+<section id="group-gifts">
+  <div class="gift-container">
+    <h2>Therslean</h2>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7qiZfU4dY1lWllzX7mPBI3" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <p>A song I dedicate to the 3 legends who made every moment shine 💖</p>
   </div>
 
- <div>
-  <a href="https://drive.google.com/drive/folders/1UtGjZ8wjLZztcmHhBfRhC-mlFcdZ8aJ1?usp=drive_link" class="floating-upload-btn" target="_blank">
-  💾 More Memories
-</a></div>
+  <div class="gift-container">
+    <h2>Harini</h2>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2takcwOaAZWiXQijPHIx7B" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <p>Your smile lit up the squad like sunrise ☀️</p>
+  </div>
+
+  <div class="gift-container">
+    <h2>Boomi</h2>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0VjIjW4GlUZAMYd2vXMi3b" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <p>Without you, the group chat would be so boring 😎</p>
+  </div>
+
+  <div class="gift-container">
+    <h2>Raja</h2>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4uLU6hMCjMI75M1A2tKUQC" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <p>The calm one, the chaos balancer 😌 We love you!</p>
+  </div>
+</section>
+
+<footer class="footer">
+  <p>"Friendship isn't about who you've known the longest… it's about who walked into your life and never left." 💫</p>
+</footer>
 
 
+  </div>
+
+ 
 
   <script src="script.js"></script>
   <script>
