--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
   <!-- Optional audio -->
   <audio id="bgmusic" autoplay loop>
     <source src="media/Friendship-Anthem-MassTamilan.io-[AudioTrimmer.com].mp3" type="audio/mpeg">
+    
     Your browser doesn’t support audio.
   </audio>
+
+  <button id="mute-btn" title="Mute/Unmute Music">🔊</button>
 
   <div class="overlay">
     <header>
@@ -29,7 +32,7 @@
     </section>
 
     <div class="upload-btn-wrapper">
-  <a href="https://drive.google.com/drive/folders/1UtGjZ8wjLZztcmHhBfRhC-mlFcdZ8aJ1?usp=drive_link" class="floating-upload-btn" target="_blank">
+  <a href="https://drive.google.com/..." class="floating-upload-btn" target="_blank">
     💾 More Memories
   </a>
 </div>
@@ -39,26 +42,26 @@
 <section id="group-gifts">
   <div class="gift-container">
     <h2>Therslean</h2>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7qiZfU4dY1lWllzX7mPBI3" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    <p>A song I dedicate to the 3 legends who made every moment shine 💖</p>
+    <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/3qXHJ7BfnsU7reHngWMI4f?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <p>If loyalty had a name, it’d echo yours. 💖</p>
   </div>
 
   <div class="gift-container">
     <h2>Harini</h2>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2takcwOaAZWiXQijPHIx7B" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    <p>Your smile lit up the squad like sunrise ☀️</p>
+    <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/1Ol8VGogqxg13AgT4nsMuG?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <p>Your energy lit up the squad like sunrise ☀️</p>
   </div>
 
   <div class="gift-container">
     <h2>Boomi</h2>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0VjIjW4GlUZAMYd2vXMi3b" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/4EkYBqzQCGDVNoL3NU4WZo?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <p>Without you, the group chat would be so boring 😎</p>
   </div>
 
   <div class="gift-container">
     <h2>Raja</h2>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4uLU6hMCjMI75M1A2tKUQC" width="100%" height="80" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    <p>The calm one, the chaos balancer 😌 We love you!</p>
+    <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/23bpCCVsTUKviTEfoy4tbM?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <p>The calm one 😌</p>
   </div>
 </section>
 
@@ -67,18 +70,32 @@
 </footer>
 
 
+
+
   </div>
+<script src="script.js"></script>
+<script>
+  window.addEventListener('DOMContentLoaded', () => {
+    const bgMusic = document.getElementById("bgmusic"); // ✅ match your actual ID
+    const muteBtn = document.getElementById("mute-btn");
 
- 
-
-  <script src="script.js"></script>
-  <script>
-  const bgmusic = document.getElementById('bgmusic');
-  bgmusic.play().catch(e => {
-    console.log("Autoplay prevented. User interaction may be required.", e);
+    muteBtn.addEventListener("click", () => {
+      if (bgMusic.paused) {
+        bgMusic.play();
+        muteBtn.textContent = "🔊"; // Unmuted
+      } else {
+        bgMusic.pause();
+        muteBtn.textContent = "🔇"; // Muted
+      }
+    });
   });
 </script>
 
+
+ 
+
+  
+  
+
 </body>
 </html>
-
